# lmu-rpm

./: .gitignore  DEVELOPING.md  README.md  example.secrets.json
moza-rpm-src/: Cargo.toml  README.md
moza-rpm-src/src/: main.rs
scripts/: check-proton-setup.sh  launch-lmu-with-rpm.sh  read-secrets.sh  reset-runtime.sh  run-moza-rpm.sh  setup-moza-rpm.sh  status-gui.py
